# plugins

amcl/: AmclPose.cc  AmclPose.hh  CMakeLists.txt
cessna_plugin/: cessna.sdf
fixed_plugin/: cessna.sdf
fixed_plugin/fixed_plugin/: CMakeLists.txt  FixedWingControllerPlugin.cc  FixedWingControllerPlugin.hh
fixed_plugin/iterations/: FixedWingControllerPlugin1.cc  FixedWingControllerPlugin2.cc
gripper/: CMakeLists.txt  Gripper.cc  Gripper.hh
realsense_camera/: CMakeLists.txt
